# cpp-byte-utilities

./: CMakeLists.txt  Readme.md
code/include/: ByteUtilities.hpp
code/src/: Tests.cpp
